2017-09-27  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use versioning based on Git snapshot.

	* Makefile.am:
	  - Add dist-hook to generate VERSION file on tarball generation.
	* +build-aux/git-version-gen:
	  - Add script to generate version based on 'git describe'
	    if in git tree, or using VERSION file if in release tarball.
	* configure.ac:
	  - Call git-version-gen to get package version.
	* autogen.sh:
	  - Apply -f to autoconf so git-version-gen does refresh the version.
	* Makefile.am:
	  - Add build-aux/git-version-gen to EXTRA_DIST.

2016-02-08  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* NEWS, configure.ac:
	  === Version 0.2.1 ===

2016-02-08  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix 'make distcheck' failure.

	'make distclean' cleaned scripts/gen.mk before entering
	'arundina' subdir, whose Makefile required it.

	In fact, scripts/gen.mk needs no configured substitution at all,
	as we can use configured variables directly in Makefiles.
	So, let's eliminate the unnecessarily problematic substitution.

	* scripts/Makefile.am, scripts/gen.mk.in -> scripts/gen.mk,
	  configure.ac:
	  - Use configured variable $(FONTFORGE) directly and thus
	    eliminate the unneeded substitution for the gen.mk file.
	* arundina/Makefile.am:
	  - Include gen.mk from source dir instead of build dir.

2016-02-08  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update my e-mail address.

	* latex/fonts-arundina.sty:
	* latex/ltharunmono.fd:
	* latex/ltharunsans.fd:
	* latex/ltharunserif.fd:
	  - Update my e-mail address.

2016-02-08  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update copyright years.

	* COPYING: Update packaging & build system copyright years.

2016-02-05  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Add fontconfig file taken from Debian.

	* configure.ac, Makefile.am, +fontconfig/, +fontconfig/Makefile.am,
	  +fontconfig/65-sipa-arundina.conf:
	  - Add fontconfig file, with related build stuffs.
