@@ -1,8 +1,8 @@
 % fonts-arundina.sty
 %
-% This file is part of the thaifonts-arundina package
+% This file is part of the fonts-arundina package
 %
-% Copyright (C) 2011 Theppitak Karoonboonyanan <theppitak@gmail.com>
+% Copyright (C) 2011-2017 Theppitak Karoonboonyanan <theppitak@gmail.com>
 %
 % It may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either version 1.3
@@ -26,15 +26,28 @@
 \def\englishsfdefault{cmss}
 \def\englishttdefault{cmtt}
 
+\newcommand{\thaifamilydefault}{\thairmdefault}
+\newcommand{\englishfamilydefault}{\englishrmdefault}
+
+% Use sans-serif font by default
+\DeclareOption{sans}{
+  \renewcommand{\thaifamilydefault}{\thaisfdefault}
+  \renewcommand{\englishfamilydefault}{\englishsfdefault}
+}
+
+\ProcessOptions\relax
+
 \DeclareRobustCommand{\thaitext}{%
-  \fontencoding{LTH}\fontfamily{\thairmdefault}\selectfont
+  \fontencoding{LTH}\fontfamily{\thaifamilydefault}\selectfont
+  \def\familydefault{\thaifamilydefault}%
   \def\rmdefault{\thairmdefault}%
   \def\sfdefault{\thaisfdefault}%
   \def\ttdefault{\thaittdefault}%
   \def\encodingdefault{LTH}}
 
 \DeclareRobustCommand{\latintext}{%
-  \fontencoding{\latinencoding}\fontfamily{\englishrmdefault}\selectfont
+  \fontencoding{\latinencoding}\fontfamily{\englishfamilydefault}\selectfont
+  \def\familydefault{\englishfamilydefault}%
   \def\rmdefault{\englishrmdefault}%
   \def\sfdefault{\englishsfdefault}%
   \def\ttdefault{\englishttdefault}%
